changed home page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<html>
-<h1> Hello Wordl </h1> 
-
-
-
-
-
-</html> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>github workshop</title>
+</head>
+<body>
+   <h1> Welcome </h1>
+   <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus adipisci cumque minus quibusdam accusamus explicabo illo amet magnam, in voluptatem doloribus nobis culpa libero recusandae blanditiis repudiandae, dolor pariatur saepe praesentium nam, nihil voluptatibus eum.</p>  
+</body>
+</html>
