--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="hero-inner">
 						<div class="hero-copy">
 							
-							 <img class="device-mockup" src="dist/images/screenZlashLogo.png" alt="screen zlash logo" >
+							 <img class="device-mockup" src="dist/images/cut_logo.png" alt="screen zlash logo" >
 						    
 	                        <h1 class="hero-title mt-0">screen zlash </h1>
 	                        <p class="hero-paragraph">An app that employs social accountability and financial incentives to aid in the development of a healthier relationship with your mobile device. </p>
